--- a/0020.완전2중화-클라우드.md
+++ b/0020.완전2중화-클라우드.md
@@ -1,4 +1,4 @@
-# Chapter 3. AWS 하이브리드 클라우드 통합을 위한 엔터프라이즈 네트워크 인프라 설계
+#  AWS 하이브리드 클라우드 통합을 위한 엔터프라이즈 네트워크 인프라 설계
 <img width="2513" height="1261" alt="image" src="https://github.com/user-attachments/assets/761bd577-0ca7-4320-8240-133c03de6bdc" />
 
 
@@ -406,20 +406,385 @@ R4(config-if)# exit
 R4(config)# interface GigabitEthernet0/1
 R4(config-if)# description Link_to_Branch_Switch
 R4(config-if)# ip address 172.16.8.1 255.255.255.0
-R4(config-if)# no shutdown
-R4(config-if)# exit
+R4(config-if)# no shutdown# Chapter 3. AWS 하이브리드 클라우드 통합을 위한 엔터프라이즈 전체 네트워크 구축
 
-! -- 3. OSPF 설정 --
-R4(config)# router ospf 1
-R4(config-router)# network 172.16.0.0 0.0.255.255 area 0
-R4(config-router)# end
-R4# write memory
+## 1. 개요 및 설계 원칙
+
+본 챕터에서는 **인터넷 연결(ISP) - 엣지(Edge) - 코어(Core) - 액세스(Access) - 지사(Branch)** 로 이어지는 전체 엔터프라이즈 네트워크 인프라를 구축합니다.
+
+### 1.1 통합 설계 핵심 사항
+
+1. **전 구간 연결성 확보:** ISP부터 내부 단말까지 끊김 없는 L2/L3 연결 구성.
+2. **AWS 연동 대비:** 사설 IP 대역(`172.16.x.x`, `192.168.x.x`, `192.170.x.x`)을 엄격히 준수하여 AWS VPC(`10.0.0.0/16`)와 충돌 방지.
+3. **고가용성(HA):** 본사 Core(MSW) 계층의 **HSRP** 구성 및 OSPF 라우팅을 통한 경로 이중화.
+4. **보안 및 세분화:** 부서(VLAN 10, 30, 40)와 서버(VLAN 20, 50), 지사(VLAN 150~180)망의 논리적 분리 및 NAT 구성.
+
+---
+
+## 2. Phase 1: 인터넷 및 Edge 구간 (ISP, Backbone L2, R1/R2)
+
+외부 인터넷 연결을 시뮬레이션하고, 본사 유입 관문인 라우터와 백본 스위치를 설정합니다.
+
+### 2.1 ISP Router (인터넷 시뮬레이션)
+
+```bash
+Router> enable
+Router# configure terminal
+Router(config)# hostname ISP_Router
+
+! -- 1. 인터넷 테스트용 Loopback --
+ISP_Router(config)# interface Loopback0
+ISP_Router(config-if)# ip address 8.8.8.8 255.255.255.255
+ISP_Router(config-if)# exit
+
+! -- 2. R1/R2 연결 인터페이스 --
+ISP_Router(config)# interface GigabitEthernet0/0
+ISP_Router(config-if)# description Link_to_R1
+ISP_Router(config-if)# ip address 111.111.111.1 255.255.255.252
+ISP_Router(config-if)# no shutdown
+ISP_Router(config-if)# exit
+
+ISP_Router(config)# interface GigabitEthernet0/1
+ISP_Router(config-if)# description Link_to_R2
+ISP_Router(config-if)# ip address 222.222.222.1 255.255.255.252
+ISP_Router(config-if)# no shutdown
+ISP_Router(config-if)# exit
 
 ```
 
-### 2.8 Branch Core Switch (L3_Branch) & Access
+### 2.2 Backbone L2 Switch (Switch13)
 
-지사는 **VLAN 150, 160, 170, 180**을 사용하여 네트워크를 분리합니다.
+R1, R2와 MSW1, MSW2 사이의 물리적 연결을 중계하는 L2 스위치입니다.
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname Switch13
+
+! -- 라우터 및 코어 스위치 연결 포트 활성화 --
+Switch13(config)# interface range FastEthernet0/1 - 24
+Switch13(config-if-range)# description Backbone_Mesh_Links
+Switch13(config-if-range)# switchport mode access
+Switch13(config-if-range)# switchport access vlan 1
+Switch13(config-if-range)# no shutdown
+Switch13(config-if-range)# end
+Switch13# write memory
+
+```
+
+### 2.3 HQ Edge Router 1 (R1) - NAT & OSPF
+
+```bash
+Router> enable
+Router# configure terminal
+Router(config)# hostname R1
+
+! -- 1. WAN/LAN 인터페이스 및 NAT 방향 설정 --
+R1(config)# interface GigabitEthernet0/0
+R1(config-if)# description Link_to_ISP1
+R1(config-if)# ip address 111.111.111.2 255.255.255.252
+R1(config-if)# ip nat outside
+R1(config-if)# no shutdown
+R1(config-if)# exit
+
+R1(config)# interface GigabitEthernet0/1
+R1(config-if)# description Link_to_MSW1
+R1(config-if)# ip address 172.16.1.1 255.255.255.0
+R1(config-if)# ip nat inside
+R1(config-if)# no shutdown
+R1(config-if)# exit
+
+R1(config)# interface GigabitEthernet0/2
+R1(config-if)# description Link_to_MSW2
+R1(config-if)# ip address 172.16.4.1 255.255.255.0
+R1(config-if)# ip nat inside
+R1(config-if)# no shutdown
+R1(config-if)# exit
+
+! -- 2. NAT 및 라우팅 설정 --
+R1(config)# access-list 1 permit 192.168.0.0 0.0.255.255
+R1(config)# access-list 1 permit 172.16.0.0 0.0.255.255
+R1(config)# ip nat inside source list 1 interface GigabitEthernet0/0 overload
+
+R1(config)# router ospf 1
+R1(config-router)# router-id 1.1.1.1
+R1(config-router)# network 172.16.0.0 0.0.255.255 area 0
+R1(config-router)# default-information originate
+R1(config-router)# exit
+R1(config)# ip route 0.0.0.0 0.0.0.0 111.111.111.1
+
+```
+
+### 2.4 HQ Edge Router 2 (R2) - NAT & OSPF
+
+```bash
+Router> enable
+Router# configure terminal
+Router(config)# hostname R2
+
+! -- 1. WAN/LAN 인터페이스 --
+R2(config)# interface GigabitEthernet0/0
+R2(config-if)# description Link_to_ISP2
+R2(config-if)# ip address 222.222.222.2 255.255.255.252
+R2(config-if)# ip nat outside
+R2(config-if)# no shutdown
+R2(config-if)# exit
+
+R2(config)# interface GigabitEthernet0/1
+R2(config-if)# ip address 172.16.2.1 255.255.255.0
+R2(config-if)# ip nat inside
+R2(config-if)# no shutdown
+R2(config-if)# exit
+
+R2(config)# interface GigabitEthernet0/2
+R2(config-if)# ip address 172.16.3.1 255.255.255.0
+R2(config-if)# ip nat inside
+R2(config-if)# no shutdown
+R2(config-if)# exit
+
+! -- 2. NAT 및 라우팅 --
+R2(config)# access-list 1 permit 192.168.0.0 0.0.255.255
+R2(config)# access-list 1 permit 172.16.0.0 0.0.255.255
+R2(config)# ip nat inside source list 1 interface GigabitEthernet0/0 overload
+
+R2(config)# router ospf 1
+R2(config-router)# router-id 2.2.2.2
+R2(config-router)# network 172.16.0.0 0.0.255.255 area 0
+R2(config-router)# default-information originate
+R2(config-router)# exit
+R2(config)# ip route 0.0.0.0 0.0.0.0 222.222.222.1
+
+```
+
+---
+
+## 3. Phase 2: HQ Core Layer (HSRP Gateway)
+
+본사의 모든 VLAN 게이트웨이 역할을 수행하며 이중화를 구성합니다.
+
+### 3.1 HQ Core Switch 1 (MSW1) - Active (Priority 110)
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname MSW1
+Switch(config)# ip routing
+
+! -- 1. VLAN 생성 (10, 20, 30, 40, 50) --
+MSW1(config)# vlan 10
+MSW1(config)# vlan 20
+MSW1(config)# vlan 30
+MSW1(config)# vlan 40
+MSW1(config)# vlan 50
+
+! -- 2. SVI 및 HSRP Active 설정 --
+! (반복되는 패턴이므로 주요 VLAN 예시, 모든 VLAN에 적용 필요)
+MSW1(config)# interface Vlan10
+MSW1(config-if)# ip address 192.168.10.2 255.255.255.0
+MSW1(config-if)# standby 10 ip 192.168.10.1
+MSW1(config-if)# standby 10 priority 110
+MSW1(config-if)# standby 10 preempt
+MSW1(config-if)# no shutdown
+
+MSW1(config)# interface Vlan20
+MSW1(config-if)# ip address 192.168.20.2 255.255.255.0
+MSW1(config-if)# standby 20 ip 192.168.20.1
+MSW1(config-if)# standby 20 priority 110
+MSW1(config-if)# standby 20 preempt
+MSW1(config-if)# no shutdown
+! (VLAN 30, 40, 50도 동일 패턴으로 Priority 110/Preempt 설정)
+
+! -- 3. Uplink (Routed Ports) --
+MSW1(config)# interface GigabitEthernet1/0/1
+MSW1(config-if)# no switchport
+MSW1(config-if)# ip address 172.16.1.2 255.255.255.0
+MSW1(config-if)# no shutdown
+MSW1(config)# interface GigabitEthernet1/0/2
+MSW1(config-if)# no switchport
+MSW1(config-if)# ip address 172.16.3.2 255.255.255.0
+MSW1(config-if)# no shutdown
+MSW1(config)# interface GigabitEthernet1/0/24
+MSW1(config-if)# no switchport
+MSW1(config-if)# ip address 172.16.5.1 255.255.255.0
+MSW1(config-if)# no shutdown
+
+! -- 4. Downlink (Trunk to L2 Switches) --
+MSW1(config)# interface range GigabitEthernet1/0/3 - 4
+MSW1(config-if-range)# switchport trunk encapsulation dot1q
+MSW1(config-if-range)# switchport mode trunk
+MSW1(config-if-range)# no shutdown
+
+! -- 5. OSPF --
+MSW1(config)# router ospf 1
+MSW1(config-router)# network 172.16.0.0 0.0.255.255 area 0
+MSW1(config-router)# network 192.168.0.0 0.0.255.255 area 0
+
+```
+
+### 3.2 HQ Core Switch 2 (MSW2) - Standby
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname MSW2
+Switch(config)# ip routing
+
+! -- 1. VLAN 생성 및 HSRP Standby --
+MSW2(config)# vlan 10
+MSW2(config)# vlan 20
+MSW2(config)# vlan 30
+MSW2(config)# vlan 40
+MSW2(config)# vlan 50
+
+MSW2(config)# interface Vlan10
+MSW2(config-if)# ip address 192.168.10.3 255.255.255.0
+MSW2(config-if)# standby 10 ip 192.168.10.1
+MSW2(config-if)# no shutdown
+! (나머지 VLAN 20, 30, 40, 50도 동일하게 Standby IP 설정)
+
+! -- 2. Uplink 및 Downlink --
+MSW2(config)# interface GigabitEthernet1/0/1
+MSW2(config-if)# no switchport
+MSW2(config-if)# ip address 172.16.2.2 255.255.255.0
+MSW2(config)# interface GigabitEthernet1/0/2
+MSW2(config-if)# no switchport
+MSW2(config-if)# ip address 172.16.4.2 255.255.255.0
+MSW2(config)# interface GigabitEthernet1/0/24
+MSW2(config-if)# no switchport
+MSW2(config-if)# ip address 172.16.5.2 255.255.255.0
+
+MSW2(config)# interface range GigabitEthernet1/0/3 - 4
+MSW2(config-if-range)# switchport trunk encapsulation dot1q
+MSW2(config-if-range)# switchport mode trunk
+MSW2(config-if-range)# no shutdown
+
+! -- 3. OSPF --
+MSW2(config)# router ospf 1
+MSW2(config-router)# network 172.16.0.0 0.0.255.255 area 0
+MSW2(config-router)# network 192.168.0.0 0.0.255.255 area 0
+
+```
+
+---
+
+## 4. Phase 3: HQ Access Layer (L2 Switches)
+
+사용자 및 서버를 위한 물리 포트 VLAN 할당을 수행합니다.
+
+### 4.1 HQ User Access L2 (좌측: 부서별)
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname HQ_Access_User
+
+! -- VLAN 생성 및 Trunk 설정 --
+HQ_Access_User(config)# vlan 10
+HQ_Access_User(config)# vlan 30
+HQ_Access_User(config)# vlan 40
+HQ_Access_User(config)# vlan 50
+HQ_Access_User(config)# interface range GigabitEthernet0/1 - 2
+HQ_Access_User(config-if-range)# switchport trunk encapsulation dot1q
+HQ_Access_User(config-if-range)# switchport mode trunk
+HQ_Access_User(config-if-range)# no shutdown
+
+! -- Access Port 할당 --
+! 임원/마케팅 (VLAN 10)
+HQ_Access_User(config)# interface range FastEthernet0/1 - 5
+HQ_Access_User(config-if-range)# switchport mode access
+HQ_Access_User(config-if-range)# switchport access vlan 10
+HQ_Access_User(config-if-range)# spanning-tree portfast
+
+! 전략기획 (VLAN 30)
+HQ_Access_User(config)# interface range FastEthernet0/6 - 10
+HQ_Access_User(config-if-range)# switchport mode access
+HQ_Access_User(config-if-range)# switchport access vlan 30
+
+! R&D (VLAN 40)
+HQ_Access_User(config)# interface range FastEthernet0/11 - 15
+HQ_Access_User(config-if-range)# switchport mode access
+HQ_Access_User(config-if-range)# switchport access vlan 40
+
+! 예비 (VLAN 50)
+HQ_Access_User(config)# interface range FastEthernet0/16 - 24
+HQ_Access_User(config-if-range)# switchport mode access
+HQ_Access_User(config-if-range)# switchport access vlan 50
+
+```
+
+### 4.2 HQ Server Access L2 (중앙: 서버팜)
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname HQ_Access_Server
+
+! -- VLAN 20 생성 및 Trunk --
+HQ_Access_Server(config)# vlan 20
+HQ_Access_Server(config-vlan)# name Server_Farm
+HQ_Access_Server(config)# interface range GigabitEthernet0/1 - 2
+HQ_Access_Server(config-if-range)# switchport trunk encapsulation dot1q
+HQ_Access_Server(config-if-range)# switchport mode trunk
+
+! -- Server Port 할당 --
+HQ_Access_Server(config)# interface range FastEthernet0/1 - 24
+HQ_Access_Server(config-if-range)# switchport mode access
+HQ_Access_Server(config-if-range)# switchport access vlan 20
+HQ_Access_Server(config-if-range)# spanning-tree portfast
+
+```
+
+---
+
+## 5. Phase 4: HQ-Branch WAN Connection
+
+### 5.1 HQ Internal Router (R3)
+
+```bash
+Router> enable
+Router# configure terminal
+Router(config)# hostname R3
+
+R3(config)# interface GigabitEthernet0/0
+R3(config-if)# ip address 172.16.5.254 255.255.255.0
+R3(config-if)# no shutdown
+
+R3(config)# interface GigabitEthernet0/1
+R3(config-if)# ip address 172.16.6.1 255.255.255.0
+R3(config-if)# no shutdown
+
+R3(config)# router ospf 1
+R3(config-router)# network 172.16.0.0 0.0.255.255 area 0
+
+```
+
+### 5.2 Branch Edge Router (R4)
+
+```bash
+Router> enable
+Router# configure terminal
+Router(config)# hostname R4
+
+R4(config)# interface GigabitEthernet0/0
+R4(config-if)# ip address 172.16.6.2 255.255.255.0
+R4(config-if)# no shutdown
+
+R4(config)# interface GigabitEthernet0/1
+R4(config-if)# ip address 172.16.8.1 255.255.255.0
+R4(config-if)# no shutdown
+
+R4(config)# router ospf 1
+R4(config-router)# network 172.16.0.0 0.0.255.255 area 0
+
+```
+
+---
+
+## 6. Phase 5: Branch Internal Network
+
+지사는 L3 스위치를 Core로 사용하고 하단에 L2 스위치를 두어 VLAN을 분리합니다.
+
+### 6.1 Branch Core Switch (L3_Branch)
 
 ```bash
 Switch> enable
@@ -427,286 +792,87 @@ Switch# configure terminal
 Switch(config)# hostname L3_Branch
 Switch(config)# ip routing
 
-! -- 1. VLAN 생성 --
+! -- VLAN Gateway (SVI) --
 L3_Branch(config)# vlan 150
 L3_Branch(config)# vlan 160
 L3_Branch(config)# vlan 170
 L3_Branch(config)# vlan 180
 
-! -- 2. SVI (Gateway) 설정 (지사 IP 대역: 192.170.x.x) --
 L3_Branch(config)# interface Vlan150
 L3_Branch(config-if)# ip address 192.170.150.1 255.255.255.0
 L3_Branch(config-if)# no shutdown
-L3_Branch(config-if)# exit
+! (VLAN 160, 170, 180도 동일 대역 규칙에 맞춰 IP 설정)
 
-L3_Branch(config)# interface Vlan160
-L3_Branch(config-if)# ip address 192.170.160.1 255.255.255.0
-L3_Branch(config-if)# no shutdown
-L3_Branch(config-if)# exit
-
-L3_Branch(config)# interface Vlan170
-L3_Branch(config-if)# ip address 192.170.170.1 255.255.255.0
-L3_Branch(config-if)# no shutdown
-L3_Branch(config-if)# exit
-
-L3_Branch(config)# interface Vlan180
-L3_Branch(config-if)# ip address 192.170.180.1 255.255.255.0
-L3_Branch(config-if)# no shutdown
-L3_Branch(config-if)# exit
-
-! -- 3. Uplink to Router --
+! -- Uplink (Routed) --
 L3_Branch(config)# interface GigabitEthernet0/1
-L3_Branch(config-if)# description Uplink_to_R4
 L3_Branch(config-if)# no switchport
 L3_Branch(config-if)# ip address 172.16.8.2 255.255.255.0
 L3_Branch(config-if)# no shutdown
-L3_Branch(config-if)# exit
 
-! -- 4. Access Port 설정 (지사 PC - VLAN 150 할당) --
-L3_Branch(config)# interface FastEthernet0/1
-L3_Branch(config-if)# description Link_to_Branch_PC
-L3_Branch(config-if)# switchport mode access
-L3_Branch(config-if)# switchport access vlan 150
-L3_Branch(config-if)# no shutdown
-L3_Branch(config-if)# exit
+! -- Downlink (Trunk to L2 Switches) --
+L3_Branch(config)# interface range GigabitEthernet0/2 - 3
+L3_Branch(config-if-range)# switchport trunk encapsulation dot1q
+L3_Branch(config-if-range)# switchport mode trunk
+L3_Branch(config-if-range)# no shutdown
 
-! -- 5. OSPF 설정 --
+! -- OSPF --
 L3_Branch(config)# router ospf 1
-L3_Branch(config-router)# network 172.16.8.0 0.0.0.255 area 0
-L3_Branch(config-router)# network 192.170.150.0 0.0.0.255 area 0
-L3_Branch(config-router)# network 192.170.160.0 0.0.0.255 area 0
-L3_Branch(config-router)# network 192.170.170.0 0.0.0.255 area 0
-L3_Branch(config-router)# network 192.170.180.0 0.0.0.255 area 0
-L3_Branch(config-router)# end
-L3_Branch# write memory
+L3_Branch(config-router)# network 172.16.0.0 0.0.255.255 area 0
+L3_Branch(config-router)# network 192.170.0.0 0.0.255.255 area 0
 
 ```
 
-# Chapter 3. Enterprise Network Infrastructure Design (Layer 2 Switching Configuration)
+### 6.2 Branch Access L2 Switches
 
-## 1. 개요 및 L2 설계 방향
-
-본 섹션에서는 물리적 연결과 논리적 VLAN 구성을 담당하는 Layer 2 스위치(액세스 계층 및 백본 연결용)의 상세 설정을 다룹니다. 도면의 토폴로지를 기반으로 각 스위치의 역할에 맞는 VLAN 할당 및 포트 설정을 진행합니다.
-
-### 1.1 L2 스위치 구성 요소
-
-* **Backbone L2 (Switch13):** 라우터(R1, R2)와 코어 스위치(MSW1, MSW2) 간의 물리적 풀 메쉬(Full Mesh) 연결을 중계하는 역할을 수행합니다.
-* **HQ User L2 (Left):** 본사 사용자(임원실, 마케팅, 전략기획, R&D)를 수용하며, 부서별 보안을 위해 VLAN 10, 30, 40, 50을 분리하여 할당합니다.
-* **HQ Server L2 (Center):** 본사 서버팜(그룹웨어, 개발, 메일, 보안서버)을 수용하며, 서버 전용 대역인 VLAN 20을 할당합니다.
-* **Branch L2 (Right):** 지사 사용자와 장비를 수용하며, VLAN 150, 160(상단) 및 170, 180(하단)으로 구분합니다.
-
----
-
-## 2. 장비별 상세 CLI 구성 (L2 Configuration)
-
-### 2.1 Internet Backbone L2 Switch (Switch13)
-
-라우터와 코어 스위치 간의 Point-to-Point L3 연결을 물리적으로 중계합니다. 별도의 VLAN 태깅 없이 단순히 패킷을 전달하는 역할이므로, 모든 포트를 기본 VLAN 1에 Access 모드로 설정하여 연결성을 보장합니다.
-
-```bash
-Switch> enable
-Switch# configure terminal
-Switch(config)# hostname Switch13
-
-! -- 1. 연결 포트 활성화 (R1, R2, MSW1, MSW2 연결) --
-! 라우티드 포트 간의 브리지 역할이므로 Access Mode 사용
-Switch13(config)# interface range FastEthernet0/1 - 24
-Switch13(config-if-range)# description Link_to_Routers_and_Cores
-Switch13(config-if-range)# switchport mode access
-Switch13(config-if-range)# switchport access vlan 1
-Switch13(config-if-range)# no shutdown
-Switch13(config-if-range)# exit
-
-! -- 2. GigabitUplink (필요 시) --
-Switch13(config)# interface range GigabitEthernet0/1 - 2
-Switch13(config-if-range)# no shutdown
-Switch13(config-if-range)# end
-Switch13# write memory
-
-```
-
-### 2.2 HQ User Access L2 Switch (좌측: 임원, 전략, R&D 등)
-
-도면 좌측 하단의 스위치로, 부서별로 서로 다른 VLAN(10, 30, 40, 50)을 할당하여 네트워크를 논리적으로 분리합니다.
-
-```bash
-Switch> enable
-Switch# configure terminal
-Switch(config)# hostname HQ_Access_User
-
-! -- 1. VLAN 생성 --
-HQ_Access_User(config)# vlan 10
-HQ_Access_User(config-vlan)# name Dept_Imwon_Mkt
-HQ_Access_User(config-vlan)# exit
-HQ_Access_User(config)# vlan 30
-HQ_Access_User(config-vlan)# name Dept_Strategy
-HQ_Access_User(config-vlan)# exit
-HQ_Access_User(config)# vlan 40
-HQ_Access_User(config-vlan)# name Dept_RnD
-HQ_Access_User(config-vlan)# exit
-HQ_Access_User(config)# vlan 50
-HQ_Access_User(config-vlan)# name Spare_Vlan
-HQ_Access_User(config-vlan)# exit
-
-! -- 2. Uplink 설정 (To MSW Core - Trunk) --
-HQ_Access_User(config)# interface range GigabitEthernet0/1 - 2
-HQ_Access_User(config-if-range)# description Uplink_to_MSW
-HQ_Access_User(config-if-range)# switchport trunk encapsulation dot1q
-HQ_Access_User(config-if-range)# switchport mode trunk
-HQ_Access_User(config-if-range)# no shutdown
-HQ_Access_User(config-if-range)# exit
-
-! -- 3. Access Port 할당 (부서별 분배) --
-! 임원실/마케팅 -> VLAN 10
-HQ_Access_User(config)# interface range FastEthernet0/1 - 5
-HQ_Access_User(config-if-range)# description User_Imwon_Marketing
-HQ_Access_User(config-if-range)# switchport mode access
-HQ_Access_User(config-if-range)# switchport access vlan 10
-HQ_Access_User(config-if-range)# spanning-tree portfast
-HQ_Access_User(config-if-range)# no shutdown
-HQ_Access_User(config-if-range)# exit
-
-! 전략기획 -> VLAN 30
-HQ_Access_User(config)# interface range FastEthernet0/6 - 10
-HQ_Access_User(config-if-range)# description User_Strategy
-HQ_Access_User(config-if-range)# switchport mode access
-HQ_Access_User(config-if-range)# switchport access vlan 30
-HQ_Access_User(config-if-range)# spanning-tree portfast
-HQ_Access_User(config-if-range)# no shutdown
-HQ_Access_User(config-if-range)# exit
-
-! R&D -> VLAN 40
-HQ_Access_User(config)# interface range FastEthernet0/11 - 15
-HQ_Access_User(config-if-range)# description User_RnD
-HQ_Access_User(config-if-range)# switchport mode access
-HQ_Access_User(config-if-range)# switchport access vlan 40
-HQ_Access_User(config-if-range)# spanning-tree portfast
-HQ_Access_User(config-if-range)# no shutdown
-HQ_Access_User(config-if-range)# exit
-
-! 예비 포트 -> VLAN 50
-HQ_Access_User(config)# interface range FastEthernet0/16 - 24
-HQ_Access_User(config-if-range)# description Spare_Ports
-HQ_Access_User(config-if-range)# switchport mode access
-HQ_Access_User(config-if-range)# switchport access vlan 50
-HQ_Access_User(config-if-range)# no shutdown
-HQ_Access_User(config-if-range)# end
-
-```
-
-### 2.3 HQ Server Access L2 Switch (중앙: 서버팜)
-
-도면 중앙 하단의 스위치로, 서버들이 위치한 VLAN 20을 전용으로 처리합니다.
-
-```bash
-Switch> enable
-Switch# configure terminal
-Switch(config)# hostname HQ_Access_Server
-
-! -- 1. VLAN 생성 --
-HQ_Access_Server(config)# vlan 20
-HQ_Access_Server(config-vlan)# name Server_Farm
-HQ_Access_Server(config-vlan)# exit
-
-! -- 2. Uplink 설정 (To MSW Core - Trunk) --
-HQ_Access_Server(config)# interface range GigabitEthernet0/1 - 2
-HQ_Access_Server(config-if-range)# description Uplink_to_MSW
-HQ_Access_Server(config-if-range)# switchport trunk encapsulation dot1q
-HQ_Access_Server(config-if-range)# switchport mode trunk
-HQ_Access_Server(config-if-range)# no shutdown
-HQ_Access_Server(config-if-range)# exit
-
-! -- 3. Access Port 할당 (서버 전체) --
-HQ_Access_Server(config)# interface range FastEthernet0/1 - 24
-HQ_Access_Server(config-if-range)# description Link_to_Servers
-HQ_Access_Server(config-if-range)# switchport mode access
-HQ_Access_Server(config-if-range)# switchport access vlan 20
-HQ_Access_Server(config-if-range)# spanning-tree portfast
-HQ_Access_Server(config-if-range)# no shutdown
-HQ_Access_Server(config-if-range)# end
-
-```
-
-### 2.4 Branch VLAN L2 Switches (지사 우측)
-
-지사 라우팅 스위치(L3_Branch) 하단에 연결되는 두 대의 L2 스위치입니다.
-
-#### **A. Branch Upper Switch (VLAN 150, 160)**
+#### **A. Branch Upper L2 (VLAN 150, 160)**
 
 ```bash
 Switch> enable
 Switch# configure terminal
 Switch(config)# hostname Branch_SW_Upper
 
-! -- 1. VLAN 생성 --
 Branch_SW_Upper(config)# vlan 150
-Branch_SW_Upper(config-vlan)# name Branch_User_A
-Branch_SW_Upper(config-vlan)# exit
 Branch_SW_Upper(config)# vlan 160
-Branch_SW_Upper(config-vlan)# name Branch_User_B
-Branch_SW_Upper(config-vlan)# exit
 
-! -- 2. Uplink (To L3_Branch) --
+! -- Uplink Trunk --
 Branch_SW_Upper(config)# interface GigabitEthernet0/1
-Branch_SW_Upper(config-if)# description Uplink_to_Branch_Core
 Branch_SW_Upper(config-if)# switchport mode trunk
 Branch_SW_Upper(config-if)# no shutdown
-Branch_SW_Upper(config-if)# exit
 
-! -- 3. Access Port 할당 --
-! PC9 연결 등 (VLAN 150)
+! -- Access Ports --
 Branch_SW_Upper(config)# interface range FastEthernet0/1 - 10
 Branch_SW_Upper(config-if-range)# switchport mode access
 Branch_SW_Upper(config-if-range)# switchport access vlan 150
-Branch_SW_Upper(config-if-range)# spanning-tree portfast
-Branch_SW_Upper(config-if-range)# no shutdown
-Branch_SW_Upper(config-if-range)# exit
 
-! 예비 (VLAN 160)
-Branch_SW_Upper(config)# interface range FastEthernet0/11 - 24
+Branch_SW_Upper(config)# interface range FastEthernet0/11 - 20
 Branch_SW_Upper(config-if-range)# switchport mode access
 Branch_SW_Upper(config-if-range)# switchport access vlan 160
-Branch_SW_Upper(config-if-range)# no shutdown
-Branch_SW_Upper(config-if-range)# end
 
 ```
 
-#### **B. Branch Lower Switch (VLAN 170, 180)**
+#### **B. Branch Lower L2 (VLAN 170, 180)**
 
 ```bash
 Switch> enable
 Switch# configure terminal
 Switch(config)# hostname Branch_SW_Lower
 
-! -- 1. VLAN 생성 --
 Branch_SW_Lower(config)# vlan 170
-Branch_SW_Lower(config-vlan)# name Branch_Service_A
-Branch_SW_Lower(config-vlan)# exit
 Branch_SW_Lower(config)# vlan 180
-Branch_SW_Lower(config-vlan)# name Branch_Service_B
-Branch_SW_Lower(config-vlan)# exit
 
-! -- 2. Uplink (To L3_Branch) --
+! -- Uplink Trunk --
 Branch_SW_Lower(config)# interface GigabitEthernet0/1
-Branch_SW_Lower(config-if)# description Uplink_to_Branch_Core
 Branch_SW_Lower(config-if)# switchport mode trunk
 Branch_SW_Lower(config-if)# no shutdown
-Branch_SW_Lower(config-if)# exit
 
-! -- 3. Access Port 할당 --
-! VLAN 170
+! -- Access Ports --
 Branch_SW_Lower(config)# interface range FastEthernet0/1 - 10
 Branch_SW_Lower(config-if-range)# switchport mode access
 Branch_SW_Lower(config-if-range)# switchport access vlan 170
-Branch_SW_Lower(config-if-range)# no shutdown
-Branch_SW_Lower(config-if-range)# exit
 
-! VLAN 180
-Branch_SW_Lower(config)# interface range FastEthernet0/11 - 24
+Branch_SW_Lower(config)# interface range FastEthernet0/11 - 20
 Branch_SW_Lower(config-if-range)# switchport mode access
 Branch_SW_Lower(config-if-range)# switchport access vlan 180
-Branch_SW_Lower(config-if-range)# no shutdown
-Branch_SW_Lower(config-if-range)# end
 
 ```
 
